--- a/docs/report/index.tex
+++ b/docs/report/index.tex
@@ -107,32 +107,40 @@
             Navigation
         \PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{div}\PY{p}{\PYZgt{}}
         \PY{p}{\PYZlt{}}\PY{n+nt}{div} \PY{n+na}{class}\PY{o}{=}\PY{l+s}{\PYZsq{}navel\PYZsq{}} \PY{n+na}{id}\PY{o}{=}\PY{l+s}{\PYZsq{}home\PYZsq{}}\PY{p}{\PYZgt{}}
-            \PY{p}{\PYZlt{}}\PY{n+nt}{i} \PY{n+na}{class}\PY{o}{=}\PY{l+s}{\PYZdq{}fa fa\PYZhy{}home\PYZdq{}} \PY{n+na}{aria\PYZhy{}hidden}\PY{o}{=}\PY{l+s}{\PYZdq{}true\PYZdq{}}\PY{p}{\PYZgt{}}\PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{i}\PY{p}{\PYZgt{}}\PY{p}{\PYZlt{}}\PY{n+nt}{br}\PY{p}{\PYZgt{}}
+            \PY{p}{\PYZlt{}}\PY{n+nt}{i} \PY{n+na}{class}\PY{o}{=}\PY{l+s}{\PYZdq{}fa fa\PYZhy{}home\PYZdq{}} \PY{n+na}{aria\PYZhy{}hidden}\PY{o}{=}\PY{l+s}{\PYZdq{}true\PYZdq{}}\PY{p}{\PYZgt{}}
+            \PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{i}\PY{p}{\PYZgt{}}\PY{p}{\PYZlt{}}\PY{n+nt}{br}\PY{p}{\PYZgt{}}
             Home
         \PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{div}\PY{p}{\PYZgt{}}
         \PY{p}{\PYZlt{}}\PY{n+nt}{div} \PY{n+na}{class}\PY{o}{=}\PY{l+s}{\PYZsq{}navel\PYZsq{}} \PY{n+na}{id}\PY{o}{=}\PY{l+s}{\PYZsq{}notes\PYZsq{}}\PY{p}{\PYZgt{}}
-            \PY{p}{\PYZlt{}}\PY{n+nt}{i} \PY{n+na}{class}\PY{o}{=}\PY{l+s}{\PYZdq{}fa fa\PYZhy{}sticky\PYZhy{}note\PYZdq{}} \PY{n+na}{aria\PYZhy{}hidden}\PY{o}{=}\PY{l+s}{\PYZdq{}true\PYZdq{}}\PY{p}{\PYZgt{}}\PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{i}\PY{p}{\PYZgt{}}\PY{p}{\PYZlt{}}\PY{n+nt}{br}\PY{p}{\PYZgt{}}
+            \PY{p}{\PYZlt{}}\PY{n+nt}{i} \PY{n+na}{class}\PY{o}{=}\PY{l+s}{\PYZdq{}fa fa\PYZhy{}sticky\PYZhy{}note\PYZdq{}} \PY{n+na}{aria\PYZhy{}hidden}\PY{o}{=}\PY{l+s}{\PYZdq{}true\PYZdq{}}\PY{p}{\PYZgt{}}
+            \PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{i}\PY{p}{\PYZgt{}}\PY{p}{\PYZlt{}}\PY{n+nt}{br}\PY{p}{\PYZgt{}}
             Notes
         \PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{div}\PY{p}{\PYZgt{}}
         \PY{p}{\PYZlt{}}\PY{n+nt}{div} \PY{n+na}{class}\PY{o}{=}\PY{l+s}{\PYZsq{}navel\PYZsq{}} \PY{n+na}{id}\PY{o}{=}\PY{l+s}{\PYZsq{}attendece\PYZsq{}}\PY{p}{\PYZgt{}}
-            \PY{p}{\PYZlt{}}\PY{n+nt}{i} \PY{n+na}{class}\PY{o}{=}\PY{l+s}{\PYZdq{}fa fa\PYZhy{}child\PYZdq{}} \PY{n+na}{aria\PYZhy{}hidden}\PY{o}{=}\PY{l+s}{\PYZdq{}true\PYZdq{}}\PY{p}{\PYZgt{}}\PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{i}\PY{p}{\PYZgt{}}\PY{p}{\PYZlt{}}\PY{n+nt}{br}\PY{p}{\PYZgt{}}
+            \PY{p}{\PYZlt{}}\PY{n+nt}{i} \PY{n+na}{class}\PY{o}{=}\PY{l+s}{\PYZdq{}fa fa\PYZhy{}child\PYZdq{}} \PY{n+na}{aria\PYZhy{}hidden}\PY{o}{=}\PY{l+s}{\PYZdq{}true\PYZdq{}}\PY{p}{\PYZgt{}}
+            \PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{i}\PY{p}{\PYZgt{}}\PY{p}{\PYZlt{}}\PY{n+nt}{br}\PY{p}{\PYZgt{}}
             Attendence
         \PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{div}\PY{p}{\PYZgt{}}
         \PY{p}{\PYZlt{}}\PY{n+nt}{div} \PY{n+na}{class}\PY{o}{=}\PY{l+s}{\PYZsq{}navel\PYZsq{}} \PY{n+na}{id}\PY{o}{=}\PY{l+s}{\PYZsq{}calender\PYZsq{}}\PY{p}{\PYZgt{}}
-            \PY{p}{\PYZlt{}}\PY{n+nt}{i} \PY{n+na}{class}\PY{o}{=}\PY{l+s}{\PYZdq{}fa fa\PYZhy{}calendar\PYZdq{}} \PY{n+na}{aria\PYZhy{}hidden}\PY{o}{=}\PY{l+s}{\PYZdq{}true\PYZdq{}}\PY{p}{\PYZgt{}}\PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{i}\PY{p}{\PYZgt{}}\PY{p}{\PYZlt{}}\PY{n+nt}{br}\PY{p}{\PYZgt{}}
+            \PY{p}{\PYZlt{}}\PY{n+nt}{i} \PY{n+na}{class}\PY{o}{=}\PY{l+s}{\PYZdq{}fa fa\PYZhy{}calendar\PYZdq{}} \PY{n+na}{aria\PYZhy{}hidden}\PY{o}{=}\PY{l+s}{\PYZdq{}true\PYZdq{}}\PY{p}{\PYZgt{}}
+            \PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{i}\PY{p}{\PYZgt{}}\PY{p}{\PYZlt{}}\PY{n+nt}{br}\PY{p}{\PYZgt{}}
             Calender
         \PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{div}\PY{p}{\PYZgt{}}
         \PY{p}{\PYZlt{}}\PY{n+nt}{div} \PY{n+na}{class}\PY{o}{=}\PY{l+s}{\PYZsq{}navel\PYZsq{}} \PY{n+na}{id}\PY{o}{=}\PY{l+s}{\PYZsq{}about\PYZsq{}}\PY{p}{\PYZgt{}}
-            \PY{p}{\PYZlt{}}\PY{n+nt}{i} \PY{n+na}{class}\PY{o}{=}\PY{l+s}{\PYZdq{}fa fa\PYZhy{}info\PYZhy{}circle\PYZdq{}} \PY{n+na}{aria\PYZhy{}hidden}\PY{o}{=}\PY{l+s}{\PYZdq{}true\PYZdq{}}\PY{p}{\PYZgt{}}\PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{i}\PY{p}{\PYZgt{}}\PY{p}{\PYZlt{}}\PY{n+nt}{br}\PY{p}{\PYZgt{}}
+            \PY{p}{\PYZlt{}}\PY{n+nt}{i} \PY{n+na}{class}\PY{o}{=}\PY{l+s}{\PYZdq{}fa fa\PYZhy{}info\PYZhy{}circle\PYZdq{}} \PY{n+na}{aria\PYZhy{}hidden}\PY{o}{=}\PY{l+s}{\PYZdq{}true\PYZdq{}}\PY{p}{\PYZgt{}}
+            \PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{i}\PY{p}{\PYZgt{}}\PY{p}{\PYZlt{}}\PY{n+nt}{br}\PY{p}{\PYZgt{}}
             About
         \PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{div}\PY{p}{\PYZgt{}}
     \PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{div}\PY{p}{\PYZgt{}}
     \PY{p}{\PYZlt{}}\PY{n+nt}{div} \PY{n+na}{class}\PY{o}{=}\PY{l+s}{\PYZsq{}midpane pane\PYZsq{}}\PY{p}{\PYZgt{}}
         \PY{p}{\PYZlt{}}\PY{n+nt}{div} \PY{n+na}{id}\PY{o}{=}\PY{l+s}{\PYZsq{}mheading\PYZsq{}}\PY{p}{\PYZgt{}}
-            \PY{p}{\PYZlt{}}\PY{n+nt}{i} \PY{n+na}{class}\PY{o}{=}\PY{l+s}{\PYZdq{}fa fa\PYZhy{}bars\PYZdq{}} \PY{n+na}{aria\PYZhy{}hidden}\PY{o}{=}\PY{l+s}{\PYZdq{}true\PYZdq{}} \PY{n+na}{id}\PY{o}{=}\PY{l+s}{\PYZdq{}hamburger\PYZhy{}menu\PYZhy{}button\PYZdq{}}\PY{p}{\PYZgt{}}\PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{i}\PY{p}{\PYZgt{}}
+            \PY{p}{\PYZlt{}}\PY{n+nt}{i} \PY{n+na}{class}\PY{o}{=}\PY{l+s}{\PYZdq{}fa fa\PYZhy{}bars\PYZdq{}} \PY{n+na}{aria\PYZhy{}hidden}\PY{o}{=}\PY{l+s}{\PYZdq{}true\PYZdq{}}
+                \PY{n+na}{id}\PY{o}{=}\PY{l+s}{\PYZdq{}hamburger\PYZhy{}menu\PYZhy{}button\PYZdq{}}\PY{p}{\PYZgt{}}\PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{i}\PY{p}{\PYZgt{}}
             \PY{p}{\PYZlt{}}\PY{n+nt}{img} \PY{n+na}{id}\PY{o}{=}\PY{l+s}{\PYZdq{}profile\PYZhy{}image\PYZdq{}} \PY{n+na}{src}\PY{o}{=}\PY{l+s}{\PYZdq{}\PYZdq{}} \PY{n+na}{alt}\PY{o}{=}\PY{l+s}{\PYZdq{}profile\PYZdq{}}\PY{p}{\PYZgt{}}
             \PY{p}{\PYZlt{}}\PY{n+nt}{div} \PY{n+na}{id}\PY{o}{=}\PY{l+s}{\PYZsq{}profile\PYZhy{}name\PYZsq{}}\PY{p}{\PYZgt{}}\PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{div}\PY{p}{\PYZgt{}}
-            \PY{p}{\PYZlt{}}\PY{n+nt}{i} \PY{n+na}{class}\PY{o}{=}\PY{l+s}{\PYZdq{}fa fa\PYZhy{}asterisk\PYZdq{}} \PY{n+na}{aria\PYZhy{}hidden}\PY{o}{=}\PY{l+s}{\PYZdq{}true\PYZdq{}} \PY{n+na}{id}\PY{o}{=}\PY{l+s}{\PYZdq{}upcoming\PYZhy{}menu\PYZhy{}button\PYZdq{}}\PY{p}{\PYZgt{}}\PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{i}\PY{p}{\PYZgt{}}
+            \PY{p}{\PYZlt{}}\PY{n+nt}{i} \PY{n+na}{class}\PY{o}{=}\PY{l+s}{\PYZdq{}fa fa\PYZhy{}asterisk\PYZdq{}}
+                \PY{n+na}{aria\PYZhy{}hidden}\PY{o}{=}\PY{l+s}{\PYZdq{}true\PYZdq{}}
+                \PY{n+na}{id}\PY{o}{=}\PY{l+s}{\PYZdq{}upcoming\PYZhy{}menu\PYZhy{}button\PYZdq{}}\PY{p}{\PYZgt{}}\PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{i}\PY{p}{\PYZgt{}}
         \PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{div}\PY{p}{\PYZgt{}}
         \PY{p}{\PYZlt{}}\PY{n+nt}{div} \PY{n+na}{id}\PY{o}{=}\PY{l+s}{\PYZsq{}mcontent\PYZsq{}}\PY{p}{\PYZgt{}}
         \PY{p}{\PYZlt{}}\PY{p}{/}\PY{n+nt}{div}\PY{p}{\PYZgt{}}
