--- a/docs/report/urls.tex
+++ b/docs/report/urls.tex
@@ -105,18 +105,31 @@
 \PY{k+kn}{from} \PY{n+nn}{.} \PY{k+kn}{import} \PY{n}{views}
 
 \PY{n}{urlpatterns} \PY{o}{=} \PY{p}{[}
-    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PY{n}{views}\PY{o}{.}\PY{n}{index}\PY{p}{,} \PY{n}{name}\PY{o}{=}\PY{l+s+s2}{\PYZdq{}}\PY{l+s+s2}{index}\PY{l+s+s2}{\PYZdq{}}\PY{p}{)}\PY{p}{,}      \PY{c+c1}{\PYZsh{} initial request for page}
+    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PY{n}{views}\PY{o}{.}\PY{n}{index}\PY{p}{,} \PY{n}{name}\PY{o}{=}\PY{l+s+s2}{\PYZdq{}}\PY{l+s+s2}{index}\PY{l+s+s2}{\PYZdq{}}\PY{p}{)}\PY{p}{,}
     \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}signin/\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PY{n}{views}\PY{o}{.}\PY{n}{signin}\PY{p}{,} \PY{n}{name}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{signin}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}\PY{p}{,}
-    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}create\PYZus{}user/(?P\PYZlt{}user\PYZus{}id\PYZgt{}[0\PYZhy{}9]+)/(?P\PYZlt{}user\PYZus{}class\PYZgt{}([a\PYZhy{}z])+)\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PY{n}{views}\PY{o}{.}\PY{n}{create\PYZus{}new\PYZus{}user}\PY{p}{,} \PY{n}{name}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{new\PYZus{}user}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}\PY{p}{,}
-    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}timetable/(?P\PYZlt{}user\PYZus{}id\PYZgt{}[0\PYZhy{}9]+)\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PY{n}{views}\PY{o}{.}\PY{n}{get\PYZus{}timetable}\PY{p}{,} \PY{n}{name}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{timetable}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}\PY{p}{,}
-    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}notes/(?P\PYZlt{}user\PYZus{}id\PYZgt{}[0\PYZhy{}9]+)\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PY{n}{views}\PY{o}{.}\PY{n}{get\PYZus{}notes}\PY{p}{,} \PY{n}{name}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{notes}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}\PY{p}{,}
-    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}subject\PYZus{}data/(?P\PYZlt{}user\PYZus{}id\PYZgt{}[0\PYZhy{}9]+)\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PY{n}{views}\PY{o}{.}\PY{n}{get\PYZus{}sub\PYZus{}data}\PY{p}{,} \PY{n}{name}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{subject\PYZus{}data}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}\PY{p}{,}
-    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}events/(?P\PYZlt{}user\PYZus{}id\PYZgt{}[0\PYZhy{}9]+)\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PY{n}{views}\PY{o}{.}\PY{n}{get\PYZus{}events\PYZus{}dummy}\PY{p}{,} \PY{n}{name}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{events}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}\PY{p}{,}
-    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}track\PYZus{}data/\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PY{n}{views}\PY{o}{.}\PY{n}{get\PYZus{}track\PYZus{}data}\PY{p}{,} \PY{n}{name}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{events}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}\PY{p}{,}
-    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}calendar/(?P\PYZlt{}user\PYZus{}id\PYZgt{}[0\PYZhy{}9]+)\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PY{n}{views}\PY{o}{.}\PY{n}{get\PYZus{}cal\PYZus{}data\PYZus{}dummy}\PY{p}{,} \PY{n}{name}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{events}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}\PY{p}{,}
-    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}subject\PYZus{}attendence/(?P\PYZlt{}user\PYZus{}id\PYZgt{}[0\PYZhy{}9]+)\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PY{n}{views}\PY{o}{.}\PY{n}{get\PYZus{}attendence}\PY{p}{,} \PY{n}{name}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{get\PYZus{}attendence}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}\PY{p}{,}
-    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}create\PYZus{}user/\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PY{n}{views}\PY{o}{.}\PY{n}{create\PYZus{}new\PYZus{}user}\PY{p}{,} \PY{n}{name}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{new\PYZus{}user}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}\PY{p}{,}
-    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}update\PYZus{}attendence/\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PY{n}{views}\PY{o}{.}\PY{n}{update\PYZus{}attendence}\PY{p}{,} \PY{n}{name}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{update\PYZus{}attendence}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}\PY{p}{,}
-    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}set\PYZus{}track\PYZus{}data/\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PY{n}{views}\PY{o}{.}\PY{n}{set\PYZus{}track\PYZus{}data}\PY{p}{,} \PY{n}{name}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{set\PYZus{}track\PYZus{}data}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}\PY{p}{,}
+    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}create\PYZus{}user/(?P\PYZlt{}user\PYZus{}id\PYZgt{}[0\PYZhy{}9]+)/(?P\PYZlt{}user\PYZus{}class\PYZgt{}}\PY{l+s+se}{\PYZbs{}}
+\PY{l+s+s1}{            ([a\PYZhy{}z])+)\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PY{n}{views}\PY{o}{.}\PY{n}{create\PYZus{}new\PYZus{}user}\PY{p}{,} \PYZbs{}
+            \PY{n}{name}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{new\PYZus{}user}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}\PY{p}{,}
+    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}timetable/(?P\PYZlt{}user\PYZus{}id\PYZgt{}[0\PYZhy{}9]+)\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PYZbs{}
+            \PY{n}{views}\PY{o}{.}\PY{n}{get\PYZus{}timetable}\PY{p}{,} \PY{n}{name}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{timetable}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}\PY{p}{,}
+    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}notes/(?P\PYZlt{}user\PYZus{}id\PYZgt{}[0\PYZhy{}9]+)\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PYZbs{}
+            \PY{n}{views}\PY{o}{.}\PY{n}{get\PYZus{}notes}\PY{p}{,} \PY{n}{name}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{notes}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}\PY{p}{,}
+    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}subject\PYZus{}data/(?P\PYZlt{}user\PYZus{}id\PYZgt{}[0\PYZhy{}9]+)\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PYZbs{}
+            \PY{n}{views}\PY{o}{.}\PY{n}{get\PYZus{}sub\PYZus{}data}\PY{p}{,} \PY{n}{name}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{subject\PYZus{}data}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}\PY{p}{,}
+    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}events/(?P\PYZlt{}user\PYZus{}id\PYZgt{}[0\PYZhy{}9]+)\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PYZbs{}
+            \PY{n}{views}\PY{o}{.}\PY{n}{get\PYZus{}events\PYZus{}dummy}\PY{p}{,} \PY{n}{name}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{events}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}\PY{p}{,}
+    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}track\PYZus{}data/\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PYZbs{}
+            \PY{n}{views}\PY{o}{.}\PY{n}{get\PYZus{}track\PYZus{}data}\PY{p}{,} \PY{n}{name}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{events}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}\PY{p}{,}
+    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}calendar/(?P\PYZlt{}user\PYZus{}id\PYZgt{}[0\PYZhy{}9]+)\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PYZbs{}
+            \PY{n}{views}\PY{o}{.}\PY{n}{get\PYZus{}cal\PYZus{}data\PYZus{}dummy}\PY{p}{,} \PY{n}{name}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{events}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}\PY{p}{,}
+    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}subject\PYZus{}attendence/(?P\PYZlt{}user\PYZus{}id\PYZgt{}[0\PYZhy{}9]+)\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PYZbs{}
+            \PY{n}{views}\PY{o}{.}\PY{n}{get\PYZus{}attendence}\PY{p}{,} \PY{n}{name}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{get\PYZus{}attendence}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}\PY{p}{,}
+    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}create\PYZus{}user/\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PYZbs{}
+            \PY{n}{views}\PY{o}{.}\PY{n}{create\PYZus{}new\PYZus{}user}\PY{p}{,} \PY{n}{name}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{new\PYZus{}user}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}\PY{p}{,}
+    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}update\PYZus{}attendence/\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PYZbs{}
+            \PY{n}{views}\PY{o}{.}\PY{n}{update\PYZus{}attendence}\PY{p}{,}\PYZbs{}
+            \PY{n}{name}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{update\PYZus{}attendence}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}\PY{p}{,}
+    \PY{n}{url}\PY{p}{(}\PY{l+s+sa}{r}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZca{}set\PYZus{}track\PYZus{}data/\PYZdl{}}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PYZbs{}
+            \PY{n}{views}\PY{o}{.}\PY{n}{set\PYZus{}track\PYZus{}data}\PY{p}{,} \PY{n}{name}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{set\PYZus{}track\PYZus{}data}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}\PY{p}{,}
 \PY{p}{]}
 \end{Verbatim}
