--- a/docs/report/abstract.tex
+++ b/docs/report/abstract.tex
@@ -8,17 +8,16 @@
 We are living in an age where the art of technology and the art of teaching has come a long way. With bridge we intent to interlace those by helping to bridge the communication gap between teachers and students. Currently, even though teachers use technology to reach out to students the solutions are more or less ad-hoc. The communication is spread over different channels, sometimes a phone call, sometimes a text message, and sometimes nothing at all. There lacks an efficient way for teachers to communicate to students directly as a group or individually. Also there is no easy way for the students and teachers to keep track of the tasks they have in hand. It is at times really hard for teachers to reach students most of time and they end up relying on the class representative to deliver the message which in itself is not bad, but is less efficient.
 
 Bridge intents to solve all the above stated problems by implementing a application using which the teachers and students can communicate seamlessly with each other, keep track of everything that they have to do, get replies asap and just about anything that helps make the student teacher communication much more effective and easy.
+% In here we will have ways in which
+% \begin{itemize}
+% \item Teachers will be able to post all details about assignments and schedule exams to a common calender which will be visible to the respective students at any time.
+% \item Teachers can also publish any results as well as remarks about a student or a group.
+% \end{itemize}
+% Now, for students
 
-In here we will have ways in which
-\begin{itemize}
-\item Teachers will be able to post all details about assignments and schedule exams to a common calender which will be visible to the respective students at any time.
-\item Teachers can also publish any results as well as remarks about a student or a group.
-\end{itemize}
-Now, for students
-
-\begin{itemize}
-\item They can always see what is coming up next in their calender
-\item They can have a place to update their attendance
-\item They can note down notes of each class and view them later
-\item They can catch up the upcoming events
-\end{itemize}
+% \begin{itemize}
+% \item They can always see what is coming up next in their calender
+% \item They can have a place to update their attendance
+% \item They can note down notes of each class and view them later
+% \item They can catch up the upcoming events
+% \end{itemize}
