--- a/docs/report/acknoledgement.tex
+++ b/docs/report/acknoledgement.tex
@@ -6,9 +6,10 @@
 
 \normalsize
 We take this opportunity to express our profound gratitude and deep regards to our guide \textbf{Mrs Anu M.}
-,for providing us with the right guidance and advice at the crucial junctures and for her constant encouragement throughout the course of this project. We are highly indebted to \textbf{Asst. Prof. Pramod Pavithran}
- and \textbf{Mr Damodaran.V}
- , Division of Computer Science our batch coordinator for her constant supervision and support for completing the project. We extend our sincere thanks to our respected Head of the department, \textbf{Ancy Zachariah}
+,for providing us with the right guidance and advice at the crucial junctures and for her constant encouragement throughout the course of this project. We are highly indebted to \textbf{Associate Prof. Pramod Pavithran}
+ and \\
+ \textbf{Associate Prof. Damodaran.V}
+ , Division of Computer Science our batch coordinator for her constant supervision and support for completing the project. We extend our sincere thanks to our respected Head of the department, \textbf{Miss Ancy Zachariah}
  ,Head of Division,Division of Computer Science and all other faculty members of for sharing their valuable time and knowledge with us. We thank God, the almighty for blessing us with his grace and taking our endeavour to a successful culmination. Lastly we would like to thank my friends and family for their constant encouragement without which this project would not have been possible.
 
 \begin{flushright}
