--- a/docs/report/cover.tex
+++ b/docs/report/cover.tex
@@ -2,7 +2,8 @@
 \vspace*{\fill}
 
 \begin{center}
-\Large
+
+\fontsize{14pt}{12pt}\selectfont
 Mini Project Report
 
 \hspace{0.7em}
@@ -10,41 +11,38 @@ Mini Project Report
 on
 
 \hspace{0.7em}
+\vspace{0.3in}
 
-\Large{\bfseries{BRIDGE}}
+\fontsize{20pt}{12pt}\selectfont{\bfseries{BRIDGE}}
 
 \normalsize
 Student Self Monitoring System
 
 \hspace{1em}
+\vspace{0.3in}
 
 submitted by
 
 \hspace{1em}
+\vspace{0.3in}
 
-\large
-Abin Simon ( 12150005 )
-
-\large
-Aayisha A A ( 12150076 )
-
-\large
+\fontsize{14pt}{12pt}\selectfont
+Abin Simon ( 12150005 )\\
+Aayisha A A ( 12150076 )\\
 Abhai Kollara ( 12150002 )
 
 \hspace{1em}
+\vspace{0.5in}
 
 \normalsize
 In partial fulfilment of the requirements for the award of degree of Bachelor of Technology in Computer Science and Engineering.
 
 \hspace{1em}
+\vspace{0.5in}
 
-\large
-DIVISION OF COMPUTER ENGINEERING
-
-SCHOOL OF ENGINEERING
-
-\hspace{1em}
-
+\fontsize{15pt}{12pt}\selectfont
+DIVISION OF COMPUTER ENGINEERING\\
+SCHOOL OF ENGINEERING\\
 COCHIN UNIVERSITY OF SCIENCE AND TECHNOLOGY
 
 \hspace{1em}
